0.5.0/_sources/gallery/3D_paths.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/3D_paths.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_3D_paths.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_3D_paths.py:


3D Paths
========

Display two vectors layers ontop of a 4-D image layer. One of the vectors
layers is 3D and "sliced" with a different set of vectors appearing on
different 3D slices. Another is 2D and "broadcast" with the same vectors
appearing on each slice.

.. tags:: visualization-advanced, layers

.. GENERATED FROM PYTHON SOURCE LINES 12-38



.. image-sg:: /gallery/images/sphx_glr_3D_paths_001.png
   :alt: 3D paths
   :srcset: /gallery/images/sphx_glr_3D_paths_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Path (2, 6, 3)






|

.. code-block:: Python


    import numpy as np
    from skimage import data

    import napari

    blobs = data.binary_blobs(
                length=128, blob_size_fraction=0.05, n_dim=3, volume_fraction=0.05
            )

    viewer = napari.Viewer(ndisplay=3)
    viewer.add_image(blobs.astype(float))

    # sample vector coord-like data
    path = np.array([np.array([[0, 0, 0], [0, 10, 10], [0, 5, 15], [20, 5, 15],
        [56, 70, 21], [127, 127, 127]]),
        np.array([[0, 0, 0], [0, 10, 10], [0, 5, 15], [0, 5, 15],
            [0, 70, 21], [0, 127, 127]])])

    print('Path', path.shape)
    layer = viewer.add_shapes(
        path, shape_type='path', edge_width=4, edge_color=['red', 'blue']
    )

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_3D_paths.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 3D_paths.ipynb <3D_paths.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 3D_paths.py <3D_paths.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
